# foundry

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: DESIGN.md  ROADMAP.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/migrations/: 0001_init.sql
src/app/: queryClient.ts  useInit.ts
src/assets/fonts/: README.md
src/components/: ErrorBoundary.tsx
src/components/layout/: Header.tsx  NavTabs.tsx  ToastStack.tsx
src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  LoadingState.tsx  Pill.tsx  ProgressRing.tsx  Tabs.tsx  Textarea.tsx
src/data/: chapters.seed.ts
src/features/chapter-reader/components/: ChapterHeader.tsx  ExploredButton.tsx  NoteComposer.tsx  SectionBlock.tsx
src/features/chapter-reader/hooks/: useChapter.ts
src/features/headquarters/components/: BuildingDirectory.tsx  ChapterRow.tsx  ResumeCard.tsx
src/features/headquarters/hooks/: useChapters.ts  useLastChapter.ts  useNoteCountsByChapter.ts  useProgress.ts
src/features/notes/api/: notesApi.ts
src/features/notes/hooks/: useTags.ts  (+3 more)
src/hooks/: useDebouncedValue.ts  useKeyboardShortcuts.ts
src/lib/: db.ts  utils.ts
src/pages/: ChapterReaderPage.tsx  HQPage.tsx  RecallPage.tsx
src/stores/: useUIStore.ts
src/styles/: globals.css
src/types/: chapter.ts  note.ts  progress.ts  settings.ts  tag.ts
(+5 files in other folders)
